--- a/abc237/src/bin/loop.tex
+++ b/abc237/src/bin/loop.tex
@@ -1,6 +1,7 @@
-\documentclass[11pt]{jsarticle}
-
+\documentclass[a4paper,oneside,onecolumn,11pt]{jsarticle}
 \usepackage{amsmath}
+
+
 \begin{document}
 	ABC237-Eの問題設定で「楽しさが変化しない、または減少する$n$頂点の閉路は存在するが、上昇する$n$頂点の閉路は存在しない」ことを示す。
 	\par i)$n = 2$のときは明らか。
